# User_Interface

./: .gitignore  LICENSE  README.md  cloudbuild.yaml  context.md  context.txt  docker-compose.yml  progress.txt  render.yaml
backend/: .env.example  .env.test  .gitignore  Dockerfile  README.md  create_tables.py  debug_auth.py  food_composition_clean.csv  import_foods.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_tests.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/api/: __init__.py  main.py
backend/api/core/: config.py  deps.py  security.py  supabase.py
backend/api/models/: __init__.py  ai.py  chat.py  common.py  database.py  food.py  loader.py  prediction.py  schemas.py  user.py
backend/api/routers/: __init__.py  ai.py  auth.py  chat.py  food.py  health.py  meal_plan.py  metrics.py  predict.py  voice.py
backend/api/services/: llm_service.py  meal_plan_service.py  pdf_service.py  rag_service.py  simple_embeddings.py  sunbird.py  voice_service.py
backend/chroma_db/: chroma.sqlite3
backend/docker/: .dockerignore  Dockerfile  docker-compose.yml
backend/docs/: DATABASE_SETUP.md  EMBEDDINGS_IMPLEMENTATION.md  HUGGINGFACE_MODEL.md  RENDER_DEPLOYMENT.md  test_voice_api.md
backend/models/: README.md  xgboost_feature_names_20251120.pkl  xgboost_label_encoders_20251120.pkl  xgboost_model_metadata_20251120.json  xgboost_nutrition_model_20251120.pkl  xgboost_scaler_20251120.pkl
backend/scripts/: check_db.py  init_db.py
backend/tests/: README.md  conftest.py  test_ai.py  test_auth.py  test_auth_debug.py  test_chat.py  test_food.py  test_health.py  test_meal_plan.py  test_model_loader.py  test_predict.py  test_voice.py
frontend/: .env.example  .env.production  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  uploads.md  vite.config.js  vitest.config.js
frontend/dev-dist/: sw.js
frontend/public/icons/: README.md
frontend/src/: App.vue  i18n.js  style.css
frontend/src/__tests__/: README.md
frontend/src/api/: ai.js  (+6 more)
(+37 files in other folders)
